# blog

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
content/: feed.md  index.md
content/livros/: somos_todos_sacerdotes.md
content/livros/somos_todos_sacerdotes/: a_qualificação_do_sacerdocio__cap_3_01__o_padrao_levitico_da_adoracao.md  a_qualificação_do_sacerdocio__cap_3_02__os_quarto_deuses_dos_filisteus.md
content/programacao/: html_css.md
content/programacao/html_css/chariza/: CH001_Arquitetura.md  CH002_breakpoints.md
content/projetos/: chariza.md
feed/: index.html
livros/somos_todos_sacerdotes/: index.html
livros/somos_todos_sacerdotes/a_qualificação_do_sacerdocio__cap_3_01__o_padrao_levitico_da_adoracao/: index.html
livros/somos_todos_sacerdotes/a_qualificação_do_sacerdocio__cap_3_02__os_quarto_deuses_dos_filisteus/: index.html
musica/escalas/MS001_escala_maior/: index.html
musica/escalas/MS002_penta_maior/: index.html
musica/escalas/MS003_penta_menor/: index.html
musica/musica/: index.html
programacao/artigos/PR001_programacao_funcional/: index.html
programacao/chariza/: index.html
programacao/html_css/: index.html
programacao/python/: index.html
programacao/python/PR001_programacao_funcional/: index.html
programacao/shell/: index.html
programacao/shell/SH001_criando_um_comando_no_shell/: index.html
projetos/chariza/: index.html
projetos/chariza/CH001_Arquitetura/: index.html
projetos/chariza/CH002_breakpoints/: index.html
projetos/gabbarito/: index.html
search/: search_index.json
(+2 files in other folders)
