[tool.poetry]
name = "gabba-blog"
version = "0.1.0"
description = ""
authors = ["Gabriel_Mendonca <gabba.script@gmail.com>"]
readme = "README.md"
packages = [{include = "gabba_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-blogging-plugin = "^2.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
